--- a/.classpath
+++ b/.classpath
@@ -2,7 +2,7 @@
 <classpath>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.6"/>
-	<classpathentry kind="lib" path="gson-2.2.2.jar"/>
-	<classpathentry kind="lib" path="mysql-connector-java-5.1.20-bin.jar"/>
+	<classpathentry kind="lib" path="bins/mysql-connector-java-5.1.20-bin.jar"/>
+	<classpathentry kind="lib" path="bins/gson-2.2.2.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
